# stellarium

./: CMakeLists.txt  deployment-script-local.sh
cmake/: custom_dso_images.cmake
nebulae/default/: textures.json
plugins/WiFiTelescopeControl/: CMakeLists.txt
plugins/WiFiTelescopeControl/resources/: WiFiTelescopeControl.json  WiFiTelescopeControl.qrc
plugins/WiFiTelescopeControl/src/: CMakeLists.txt  WiFiTelescope.cpp  WiFiTelescope.hpp  WiFiTelescopeControl.cpp  WiFiTelescopeControl.hpp  WiFiTelescopeControlDialog.cpp  WiFiTelescopeControlDialog.hpp
plugins/WiFiTelescopeControl/src/gui/: CMakeLists.txt  WiFiTelescopeControlDialog.ui
